@@ -1,0 +1,36 @@
+# JavaCmd.test --
+#
+#	This file tests aspects of Command.cmdProc() API
+#	that apply to both Jacl and Tcl Blend.
+#
+# This file contains a collection of tests for one or more of the Tcl
+# built-in commands.  Sourcing this file into Tcl runs the tests and
+# generates output for errors.  No output means no errors were found.
+#
+# Copyright (c) 2002 Mo DeJong
+#
+# See the file "license.terms" for information on usage and redistribution
+# of this file, and for a DISCLAIMER OF ALL WARRANTIES.
+#
+# RCS: @(#) $Id: JavaCmd.test,v 1.1 2002/12/31 05:37:17 mdejong Exp $
+
+if {[lsearch [namespace children] ::tcltest] == -1} {
+    package require tcltest
+    namespace import -force ::tcltest::*
+}
+
+setupJavaPackage
+
+test javaCmd-2.1 {duplicate arguments} {
+    [java::getinterp] createCommand testsameargumentobjects \
+        [java::new tests.SameArgumentObjectsCmd]
+
+    set obj "mystring"
+    set result [testsameargumentobjects $obj $obj]
+    rename testsameargumentobjects {}
+    set result
+} 1
+
+# cleanup
+::tcltest::cleanupTests
+return
